packages/next-swc/crates/next-dev-tests/tests/integration/next/error/webpack-loaders/input/next.config.js
module.exports = {
  experimental: {
    turbo: {
      loaders: {
        '.replace': [
          { loader: 'replace-loader', options: { defaultExport: 3 } },
        ],
      },
    },
  },
}
